# Byte_Runner

./: CMakeLists.txt  README.md  pixel.sln
pixel/: Byte_Runner.rc  Flame_Crash.c  Note.md  README.md  background.c  barrier.c  coin.c  color.c  control.c  crash.c  cursor_hidden.c  difficulty_choice.c  figure.c  file.c  flamethrower.c  game.h  gameover.c  main.c  menu.c  move.c  move_to_xy.c  music.c  pixel.vcxproj  pixel.vcxproj.filters  play_mode.c  resource.h  score.c  shield.c  statement.c  status_bar.c
